[project]
name = "web-scraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "ipykernel>=6.30.0",
    "lxml>=6.0.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.2",
    "requests>=2.32.4",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
]
